@@ -3,6 +3,7 @@ package com.github.exbotanical.mug.cors;
 import com.github.exbotanical.mug.constant.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Common defaults for use with Cors middleware.
@@ -10,13 +11,13 @@ import java.util.Arrays;
 class Defaults {
   // Default allowed headers. Defaults to the "Origin" header, though this should be included
   // automatically.
-  static final ArrayList<String> defaultAllowedHeaders =
-      new ArrayList<>(Arrays.asList(CommonHeader.ORIGIN.value));
+  static final List<String> defaultAllowedHeaders =
+      List.of(CommonHeader.ORIGIN.value);
 
   // Default allowed methods. Defaults to simple methods (those that do not trigger a Preflight).
-  static final ArrayList<String> defaultAllowedMethods =
-      new ArrayList<>(Arrays.asList(Method.GET.toString(), Method.POST
-          .toString(), Method.HEAD.toString()));
+  static final List<String> defaultAllowedMethods =
+      List.of(Method.GET.toString(), Method.POST
+          .toString(), Method.HEAD.toString());
 
   private Defaults() {}
 }
